# mcp-finance

./: .gitignore  README.md  pyproject.toml  requirements.txt  server.py
.github/workflows/: ci.yml
tests/: __init__.py  conftest.py  test_helpers.py  test_tools.py
